# ai-interviewer

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  storage.py  streaming.py
backend/app/api/: health.py  interview.py  prepare.py
backend/app/llm/: client.py
backend/app/prompts/: templates.py
backend/app/rag/: loader.py  retriever.py
backend/app/rag/data/: interview_topics.json
backend/app/schemas/: interview.py  prepare.py  report.py
backend/app/services/: interview_service.py  pdf_extract.py  prepare_service.py  report_service.py  scoring.py
backend/tests/: conftest.py  test_health.py  test_interview_flow.py  test_llm_client.py  test_prepare_api.py  test_prompt_templates.py  test_report_api.py  test_storage.py
docs/: all.md  model.txt  requirements_v0.1.md  resume_notes.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: home-landing.module.css  home-landing.test.tsx  home-landing.tsx  home-pinned-canvas.module.css  home-pinned-canvas.test.tsx  home-pinned-canvas.tsx  home-process-canvas.module.css  home-process-canvas.test.tsx  home-process-canvas.tsx  interview-flow.test.tsx  interview-flow.tsx  prepare-flow.test.tsx  prepare-flow.tsx  report-flow.test.tsx  report-flow.tsx  site-nav.test.tsx  site-nav.tsx
frontend/lib/: backend.ts  copy.test.ts  copy.ts  frontend-api.ts  interview-presenter.test.ts  interview-presenter.ts  session-store.test.ts  session-store.ts  streaming.test.ts  streaming.ts  (+1 more)
(+17 files in other folders)
